added new notes

--- a/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
@@ -812,7 +812,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1: Suppose you have two coins in a box. One is a normal coin with heads on one side and tails on the other, and one is a trick coin with heads on both sides. You choose a coin at random and see that one of the sides is heads. What is the probability that you chose the trick coin?"
+    "#### 2.1: Suppose you have two coins in a box. One is a normal coin with heads on one side and tails on the other, and one is a trick coin with heads on both sides. You choose a coin at random and see that one of the sides is heads. What is the probability that you chose the trick coin?\n",
+    "\n",
+    "- P(Fair Coin) = 1/2\n",
+    "- P(Rigged Coin) = 1/2\n",
+    "- P(Rigged Coin | Heads)\n",
+    "\n",
+    "- P(H) = P(H| Fair Coin) * P(Fair Coin) = 1/2 * 1/2\n",
+    "- P(H | Rigged Coin) * P(Rigged Coin) = (1) (1/2)\n",
+    "- (1/2 * 1/2) + (1 * 1/2) = 1/4 + 1/2 = 3/4 = 0.75\n",
+    "- P(Rigged Coin | H) = P(H|Rigged Coin) * P(Rigged Coin) / P(H)\n",
+    "- 1 * 1/2 / (3/4) = 1/2 / 3/4 = 2/3\n",
+    "\n",
+    "#### The probability that you chose the rigged coin, given that you observed heads is 66.7%"
    ]
   },
   {
