--- a/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
@@ -830,6 +830,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Example 2-2.\n",
+    "#### Suppose you meet someone and learn that they have two children. You ask if either child is a girl and they say yes. What is the probability that both children are girls?\n",
+    "#### Hint: Start with four equally likely hypotheses.\n",
+    "\n",
+    "- P(G|G)\n",
+    "- P(G|B)\n",
+    "- P(B|G)\n",
+    "- P(B|B)\n",
+    "\n",
+    "#### All probabilities = 1/4, since BB is not an option that limits the scope\n",
+    "\n",
+    "- P(GG | at least one girl)\n",
+    "- P(At least one girl)\n",
+    "- P(GG) = 1/4\n",
+    "- P(At least one girl) = P(GG) + P(BG) + P(GB) = 1/4 + 1/4 + 1/4 = 3/4\n",
+    "\n",
+    "- P(GG | at least one girl) = P(GG) / P(At least one girl) = 1/4 / 3/4 = 1/3\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
