--- a/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
@@ -854,7 +854,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Addition Rule\n",
+    "#### P( A or B) = P(A) + P(B) - P(A and B)"
+   ]
   }
  ],
  "metadata": {
