--- a/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
@@ -858,6 +858,25 @@
     "## Addition Rule\n",
     "#### P( A or B) = P(A) + P(B) - P(A and B)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 2-4.\n",
+    "\n",
+    "#### M&M’s are small candy-coated chocolates that come in a variety of colors. Mars, Inc., which makes M&M’s, changes the mixture of colors from time to time. In 1995, they introduced blue M&M’s.\n",
+    "\n",
+    "- In 1994, the color mix in a bag of plain M&M’s was 30% Brown, 20% Yellow, 20% Red, 10% Green, 10% Orange, 10% Tan.\n",
+    "- In 1996, it was 24% Blue, 20% Green, 16% Orange, 14% Yellow, 13% Red, 13% Brown.\n",
+    "\n",
+    "#### Suppose a friend of mine has two bags of M&M’s, and he tells me that one is from 1994 and one from 1996. He won’t tell me which is which, but he gives me one M&M from each bag. One is yellow and one is green. What is the probability that the yellow one came from the 1994 bag?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
