added new answer questions

--- a/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Bayes-Theorem.ipynb
@@ -870,13 +870,46 @@
     "- In 1994, the color mix in a bag of plain M&M’s was 30% Brown, 20% Yellow, 20% Red, 10% Green, 10% Orange, 10% Tan.\n",
     "- In 1996, it was 24% Blue, 20% Green, 16% Orange, 14% Yellow, 13% Red, 13% Brown.\n",
     "\n",
-    "#### Suppose a friend of mine has two bags of M&M’s, and he tells me that one is from 1994 and one from 1996. He won’t tell me which is which, but he gives me one M&M from each bag. One is yellow and one is green. What is the probability that the yellow one came from the 1994 bag?"
+    "#### Suppose a friend of mine has two bags of M&M’s, and he tells me that one is from 1994 and one from 1996. He won’t tell me which is which, but he gives me one M&M from each bag. One is yellow and one is green. What is the probability that the yellow one came from the 1994 bag?\n",
+    "\n",
+    "#### Step 1 Define the Hypotheses\n",
+    "- HA = The hypothesis that the first M&M (yellow) came from the 1994 bag, and the second M&M (green) came from the 1996 bag.\n",
+    "- HB = The hypothesis that the first M&M (yellow) came from the 1996 bag, and the second M&M (green) came from the 1994 bag.\n",
+    "\n",
+    "#### Step 2 Define the Prior Probabilities\n",
+    "- P(HA) = 0.5\n",
+    "- P(HB) = 0.5\n",
+    "\n",
+    "#### Step 3 Calculate the Likelihoods\n",
+    "#### P(Yellow from 1994, Green from 1996 | HA)\n",
+    "- The probability of picking a yellow M&M from the 1994 bag is 20%.\n",
+    "- The probability of picking a green M&M from the 1996 bag is 20%.\n",
+    "- P(Yellow from 1994, Green from 1996 | HA) = 0.04\n",
+    "\n",
+    "#### P(Yellow from 1994, Green from 1996 | HA)\n",
+    "- The probability of picking a yellow M&M from the 1996 bag is 14%.\n",
+    "- The probability of picking a green M&M from the 1994 bag is 10%.\n",
+    "- P(Yellow from 1994, Green from 1996 | HA) = 0.14 × 0.10 = 0.014\n",
+    "\n",
+    "\n",
+    "#### Apply Bayes Theorem\n",
+    "\n",
+    "- P(H | D) = P(D | H) * P(H) / P(D)\n",
+    "- P(D) = is the total probability of the data under all hypotheses, calculated as\n",
+    "- P(D) = P(D |HA) * P(HA) + P(D|HB) * P(HB)\n",
+    "- P(D) = 0.04 × 0.5 + 0.014 × 0.5 = 0.02 + 0.007 = 0.027\n",
+    "\n",
+    "- P(HA | D) = P(Yellow from 1994, Green from 1996 | HA) X P(HA) / P(D)\n",
+    "- P(HA | D) = 0.04 * 0.5 / 0.027 = 0.002 / 0.0027 = 0.741"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Conclusion:\n",
+    "#### The probability that the yellow M&M came from the 1994 bag and the green M&M came from the 1996 bag, given one M&M is yellow and one is green, is approximately 74.1%."
+   ]
   }
  ],
  "metadata": {
