added new ntoes

--- a/Mathematics/Statistics/Think-Bayes/Distributions.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Distributions.ipynb
@@ -13,7 +13,10 @@
    "source": [
     "## Probability Mass Functions\n",
     "\n",
-    "#### If the outcomes in a distribution are discrete, we can describe the distribution with a probability mass function, or PMF, which is a function that maps from each possible outcome to its probability."
+    "#### If the outcomes in a distribution are discrete, we can describe the distribution with a probability mass function, or PMF, which is a function that maps from each possible outcome to its probability.\n",
+    "#### This distribution, which contains the prior probability for each hypothesis, is called—wait for it—the prior distribution.\n",
+    "\n",
+    "#### The quantity with the highest posterior probability is called the MAP, which stands for “maximum a posteori probability”, where “a posteori” is unnecessary Latin for “posterior”."
    ]
   },
   {
