--- a/Mathematics/Statistics/Think-Bayes/Distributions.ipynb
+++ b/Mathematics/Statistics/Think-Bayes/Distributions.ipynb
@@ -50,16 +50,10 @@
     "#### Step 4:\n",
     "- P(H | Data) = P(Data|H) * P(H) / P(D)\n",
     "\n",
-    "- P(Data) = \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##"
+    "- P(Data) = (P(Data |H6) * P(H6)) + (P(Data |H8) * P(H8)) + (P(Data |H12) * P(H12)) = 0 * 1/3 + 1/4096 * 1/3 + 1/20736 * 1/3 = 0.0000964\n",
+    "- P(H8 | Data) = 1/4096 * 1/3 / 0.0000964 = 0.822%\n",
+    "\n",
+    "\n"
    ]
   }
  ],
