added new notes

--- a/Mathematics/Statistics/Bayesian-Data.ipynb/Intro.ipynb
+++ b/Mathematics/Statistics/Bayesian-Data.ipynb/Intro.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Discrete Case: Multinomial Bayesian Networks"
+    "# Introduction: Credibility, Models, and Parameters"
    ]
   },
   {
