added new nodes

--- a/Natural-Language-Process/transformer.ipynb
+++ b/Natural-Language-Process/transformer.ipynb
@@ -68,7 +68,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Temperature\n",
+    "\n",
+    "####  Lowers the entropy, causing the output distribution to become \"peakier\". This leads to more confident (less random) outputs, often enhancing the readability and relevance of the generated text, but can result in repetitive or less creative outputs."
+   ]
   }
  ],
  "metadata": {
