added new notes

--- a/Natural-Language-Process/transformer.ipynb
+++ b/Natural-Language-Process/transformer.ipynb
@@ -73,6 +73,26 @@
     "\n",
     "####  Lowers the entropy, causing the output distribution to become \"peakier\". This leads to more confident (less random) outputs, often enhancing the readability and relevance of the generated text, but can result in repetitive or less creative outputs."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GLOVE\n",
+    "\n",
+    "#### The GloVe model, which stands for Global Vectors for Word Representation, is a widely used approach in Natural Language Processing (NLP) for learning word embeddings. Developed by researchers at Stanford, GloVe is designed to efficiently capture the linear substructures of words in a high-dimensional vector space based on the statistical information derived from a text corpus. Here's a detailed explanation of how GloVe works and its uses in NLP\n",
+    "\n",
+    "- Co-occurrence Matrix: GloVe begins by constructing a large matrix that represents the co-occurrence statistics of words within a given context window in the training corpus. Each element in this matrix counts how often a word appears in the context of another word in the corpus.\n",
+    "\n",
+    "- Objective Function: Unlike other word embedding techniques that work with local context windows in a predictive manner, GloVe specifically aims to minimize the difference between the dot product of the embeddings of two words and the logarithm of their co-occurrence probability. This results in capturing both local and global statistics of the corpus in the model, hence the name \"Global Vectors.\"\n",
+    "\n",
+    "- Dimensionality Reduction: The model effectively reduces the dimensionality of the co-occurrence matrix, attempting to preserve as much variance as possible (i.e., the significant relationships between words) while keeping the word vector size manageable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
