added new notes

--- a/Transformer-Books/Transformer-NLP-CV/What-Are-Transformers.ipynb
+++ b/Transformer-Books/Transformer-NLP-CV/What-Are-Transformers.ipynb
@@ -43,6 +43,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A brief journey from recurrent to attention\n",
+    "\n",
+    "#### For decades, Recurrent Neural Networks (RNNs), including LSTMs, have applied neural networks to NLP sequence models. However, using recurrent functionality reaches its limit when faced with long sequences and large numbers of parameters. Thus, state-of-the-art transformer models now prevail."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
