added new notes

--- a/Natural-Language-Process/basics.ipynb
+++ b/Natural-Language-Process/basics.ipynb
@@ -62,6 +62,20 @@
     "\n",
     "### However, there is an issue with this vanilla precision. Assume the generated text just repeats the same word over and over again, and this word also appears in the reference. If it is repeated as many times as the length of the reference text, then we get perfect precision! For this reason, the authors of the BLEU paper introduced a slight modification: a word is only counted as many times as it occurs in the reference. To illustrate this point, suppose we have the reference text “the cat is on the mat” and the generated text “the the the the the the”."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Seq2Seq Modeling\n",
+    "\n",
+    "#### Sequence to Sequence (Seq2Seq) modeling is a concept in machine learning, particularly in the field of Natural Language Processing (NLP), that involves building models that can convert sequences from one domain to sequences in another domain. This type of model is especially prominent in applications where both the input and output are sequences, such as machine translation, speech recognition, and text summarization.\n",
+    "\n",
+    "#### Seq2Seq models typically consist of two main components:\n",
+    "- Encoder: This part of the model processes the input sequence. The encoder reads and encodes the entire input sequence into a fixed-length context vector, which ideally captures the semantic content of the input. The encoding is usually done by a Recurrent Neural Network (RNN) or one of its variants like LSTM (Long Short-Term Memory) or GRU (Gated Recurrent Units).\n",
+    "- Decoder: Starting from the context vector produced by the encoder, the decoder generates the output sequence. It does this step-by-step, producing one element of the output sequence at a time. Like the encoder, the decoder is often implemented as an RNN, LSTM, or GRU.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
