added new notes

--- a/Natural-Language-Process/basics.ipynb
+++ b/Natural-Language-Process/basics.ipynb
@@ -76,6 +76,24 @@
     "- Decoder: Starting from the context vector produced by the encoder, the decoder generates the output sequence. It does this step-by-step, producing one element of the output sequence at a time. Like the encoder, the decoder is often implemented as an RNN, LSTM, or GRU.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RAG\n",
+    "\n",
+    "####  Retrieval-Augmented Generation (RAG) is the process of optimizing the output of a large language model, so it references an authoritative knowledge base outside of its training data sources before generating a response.\n",
+    "\n",
+    "- Contextual Awareness: By retrieving and utilizing relevant documents, RAG models can produce responses that are contextually richer and more accurate compared to models that generate responses based solely on the query and fixed knowledge encoded during training.\n",
+    "- Scalability: RAG allows models to leverage vast amounts of information without needing to store all that data within the model parameters. This scalability is crucial for applications requiring up-to-date or specialized knowledge that evolves or expands over time.\n",
+    "- It redirects the LLM to retrieve relevant information from authoritative, pre-determined knowledge sources. Organizations have greater control over the generated text output, and users gain insights into how the LLM generates the response."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
