added new notes

--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -84,7 +84,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 2.6 Coherency of Bayes’ rule\n",
+    "\n",
+    "#### An important property of Bayes’ rule is that it is coherent : if we receive multiple pieces of information and wish to update our probabilities to incorporate all the information, it does not matter whether we update sequentially, taking each piece of evidence into account one at a time, or simultaneously, using all the evidence at once. Suppose, for example, that we’re conducting a weeklong experiment that yields data at the end of each day. We could use Bayes’ rule every day to update our probabilities based on the data from that day. Or we could go on vacation for the week, come back on Friday afternoon, and update using the entire week’s worth of data. Either method will give the same result.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
