added new notes

--- a/Mathematics/Time-Series/Practical-Time-Series-Analysis/Introduction.ipynb
+++ b/Mathematics/Time-Series/Practical-Time-Series-Analysis/Introduction.ipynb
@@ -27,6 +27,41 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### The objective of time series analysis is to decompose a time series into its constituent characteristics and develop mathematical models for each. These models are then used to understand what causes the observed behavior of the time series and to predict the series for future points in time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## General trend\n",
+    "\n",
+    "#### When a time series exhibits an upward or downward movement in the long run, it is said to have a general trend.\n",
+    "\n",
+    "#### However, general trend might not be evident over a short run of the series. Short run effects such as seasonal fluctuations and irregular variations cause the time series to revisit lower or higher values observed in the past and hence can temporarily obfuscate any general trend. This is evident in the same time series of CO2 concentrations when zoomed in over the period of 1979 through 1981, as shown in the following figure. Hence to reveal general trend, we need a time series that dates substantially back in the past.\n",
+    "\n",
+    "#### A general trend is commonly modeled by setting up the time series as a regression against time and other known factors as explanatory variables. The regression or trend line can then be used as a prediction of the long run movement of the time series. Residuals left by the trend line is further analyzed for other interesting properties such as seasonality, cyclical behavior, and irregular variations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Seasonality\n",
+    "#### Seasonality manifests as repetitive and period variations in a time series. In most cases, exploratory data analysis reveals the presence of seasonality. Let us revisit the de-trended time series of the CO2 concentrations. Though the de-trended line series has constant mean and constant variance, it systematically departs from the trend model in a predictable fashion.\n",
+    "#### Seasonality is manifested as periodic deviations such as those seen in the de-trended observations of CO2 emissions. Peaks and troughs in the monthly sales volume of seasonal goods such as Christmas gifts or seasonal clothing is another example of a time series with seasonality.\n",
+    "\n",
+    "#### A practical technique of determining seasonality is through exploratory data analysis through the following plots:\n",
+    "\n",
+    "- Run sequence plot\n",
+    "- Seasonal sub series plot\n",
+    "- Multiple box plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
