added new notes

--- a/Mathematics/Time-Series/Practical-Time-Series-Analysis/Introduction.ipynb
+++ b/Mathematics/Time-Series/Practical-Time-Series-Analysis/Introduction.ipynb
@@ -56,7 +56,22 @@
     "\n",
     "- Run sequence plot\n",
     "- Seasonal sub series plot\n",
-    "- Multiple box plots"
+    "- Multiple box plots\n",
+    "\n",
+    "## Run sequence plot\n",
+    "#### A simple run sequence plot of the original time series with time on x-axis and the variable on y-axis is good for indicating the following properties of the time series:\n",
+    "\n",
+    "- Movements in mean of the series\n",
+    "- Shifts in variance\n",
+    "- Presence of outliers\n",
+    "\n",
+    "#### The following figure is the run sequence plot of a hypothetical time series that is obtained from the mathematical formulation xt = (At + B) sin(t) + Є(t) with a time-dependent mean and error Є(t) that varies with a normal distribution N(0, at + b) variance. Additionally, a few exceptionally high and low observations are also included as outliers.\n",
+    "\n",
+    "- Xt = This is the value of the series at time t. It could represent any quantity that changes over time, such as temperature, stock prices, or electrical signals.\n",
+    "- A = This term appears to be a time-dependent coefficient or parameter in the model. It could vary with time, reflecting dynamic changes in the system's characteristics or influence on the output x t.\n",
+    "- B =  This is a constant term, which might represent a baseline or shift factor in the model. It adjusts the baseline around which the sinusoidal component oscillates.\n",
+    "- Sin(t) = This function introduces a periodic or oscillatory component to the model, with a standard period of 2π radians. The presence of sin(t) suggests that xt includes cyclic behavior, typical in phenomena like seasonal effects, mechanical vibrations, or circadian rhythms.\n",
+    "- E(t) = his represents the random error or noise at time t. It accounts for variability in xt that is not explained by the deterministic part of the model (At+B)sin(t), E(t) could be modeled with various statistical distributions depending on the context, typically aiming to capture random fluctuations due to measurement errors, unmodeled influences, or inherent randomness in the system."
    ]
   },
   {
