added new notes

--- a/Mathematics/Time-Series/Practical-Time-Series-Analysis/Introduction.ipynb
+++ b/Mathematics/Time-Series/Practical-Time-Series-Analysis/Introduction.ipynb
@@ -77,7 +77,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Seasonal sub series plot\n",
+    "#### For a known periodicity of seasonal variations, seasonal sub series redraws the original series over batches of successive time periods. For example, the periodicity in the CO2 concentrations is 12 months and based on this a seasonal sub series plots on mean and standard deviation of the residuals are shown in the following figure. To visualize seasonality in the residuals, we create quarterly mean and standard deviations.\n",
+    "\n",
+    "#### A seasonal sub series reveals two properties:\n",
+    "\n",
+    "- Variations within seasons as within a batch of successive months\n",
+    "- Variations between seasons as between batches of successive months"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple box plots\n",
+    "\n",
+    "#### The seasonal sub series plot can be more informative when redrawn with seasonal box plots as shown in the following figure. A box plot displays both central tendency and dispersion within the seasonal data over a batch of time units. Besides, separation between two adjacent box plots reveal the within season variations:"
+   ]
   }
  ],
  "metadata": {
