added new notes

--- a/Mathematics/Time-Series/Practical-Time-Series-Analysis/Introduction.ipynb
+++ b/Mathematics/Time-Series/Practical-Time-Series-Analysis/Introduction.ipynb
@@ -170,7 +170,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Autocorrelation and partial autocorrelation are important concepts in the analysis of time series data, which refer to the correlation of a time series with its own past and future values. These metrics are crucial for identifying patterns within the data, particularly for the purposes of forecasting and model building.\n",
+    "\n",
+    "#### Autocorrelation, also known as serial correlation or lagged correlation, measures the linear relationship between lagged values of the time series. Essentially, it quantifies how well the current value of the series is related to its past values.\n",
+    "\n",
+    "#### Purpose: Autocorrelation is used to identify the repeating patterns or seasonal effects in a time series, particularly when these effects are consistent at specific lags. For example, in monthly sales data, a significant autocorrelation at lag 12 might suggest an annual cycle.\n",
+    "\n",
+    "#### Partial autocorrelation measures the correlation between xt and xt-k that is not explained by correlations at all lower-order lags. It provides a correlation between two variables while controlling for the effects of other lagged variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stationarity in a time series means that the statistical properties of the series like the mean, variance, and autocorrelation are constant over time. Stationarity is a crucial assumption in many time series models because it implies that the underlying mechanisms generating the series are stable and consistent, which makes the series easier to model and predict\n",
+    "\n",
+    "#### Why Verify Stationarity: Most time series models, such as ARIMA (Autoregressive Integrated Moving Average) models, assume that the input data are stationary. Non-stationary data can lead to misleading models and forecasts because the model might be trying to model a trend or seasonality as if they were constants, which they are not.\n",
+    "\n",
+    "#### Exogenous variables are external factors that affect the dependent variable (the main time series of interest) but are not affected by it. These are contrasted with endogenous variables, which are influenced by other variables within the model, including the dependent variable.\n",
+    "\n",
+    "##### Why Identify Exogenous Variables: Incorporating exogenous variables can significantly improve the accuracy of a model if these variables provide additional explanatory power about the dynamics of the dependent variable. For example, in a model predicting electricity demand, temperature could be an exogenous variable.\n"
+   ]
   }
  ],
  "metadata": {
