added new notes

--- a/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
@@ -24,7 +24,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Differencing\n",
+    "\n",
+    "#### The basic idea of differencing is taking differences between successive occurrences of the time series Δxt = xt - xt-1 such that Δxt have constant mean and variance and hence can be treated as a stationary series.\n",
+    "The ADF test is based on the idea of differencing the original time series and therefore we will explain it after discussing various types of differencing techniques.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First-order differencing\n",
+    "\n",
+    "#### First order differencing implies taking differences between successive realizations of the time series so that the differences Δxt are irregular variations free from any long run trend or seasonality. The random walk model discussed in the last chapter is a sum of subsequent random variations and is given by xt = xt-l + Єt where Єt is a zero mean random number from normal distribution. Random walks are characterized by long sequence of upward or downward trends. Besides, they take unforeseen changes in direction. Based on these characteristics, random walks are non-stationary. However, the first differences (Δxt of a random walk are equal to the random noise Єt. Hence the residuals remaining after first-order differencing of a random walk is a zero-mean stationary series.\n",
+    "\n",
+    "## Second-order differencing\n",
+    "#### In some cases, first-order differencing does not stationarize the time series and therefore the data is differenced another time to generate a stationary time series. Therefore, the second-order differenced time series is generated as follows:"
+   ]
   }
  ],
  "metadata": {
