added new notes

--- a/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
@@ -41,8 +41,24 @@
     "#### First order differencing implies taking differences between successive realizations of the time series so that the differences Δxt are irregular variations free from any long run trend or seasonality. The random walk model discussed in the last chapter is a sum of subsequent random variations and is given by xt = xt-l + Єt where Єt is a zero mean random number from normal distribution. Random walks are characterized by long sequence of upward or downward trends. Besides, they take unforeseen changes in direction. Based on these characteristics, random walks are non-stationary. However, the first differences (Δxt of a random walk are equal to the random noise Єt. Hence the residuals remaining after first-order differencing of a random walk is a zero-mean stationary series.\n",
     "\n",
     "## Second-order differencing\n",
-    "#### In some cases, first-order differencing does not stationarize the time series and therefore the data is differenced another time to generate a stationary time series. Therefore, the second-order differenced time series is generated as follows:"
+    "#### In some cases, first-order differencing does not stationarize the time series and therefore the data is differenced another time to generate a stationary time series. Therefore, the second-order differenced time series is generated as follows:\n",
+    "\n",
+    "## Seasonal differencing\n",
+    "#### When a time series exhibits seasonality of a known time period of m time indices, it can be stationarized by taking seasonal differences between xt and xt-m. These differences taken at lags of length m are indicative of the seasons or quarters in a year. In this case m = 12 and the differences are taken between original observations that are a year apart from each other. The seasonal differences can be expressed as follows:"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Augmented Dickey-Fuller test\n",
+    "#### The statistical tests for objectively determining whether differencing is required to stationarize a time series are known as unit root tests. There are several such tests of which we discuss the ADF test is one of the unit root tests, that is most commonly used for verifying non-stationarity in the original time series. According to the ADF test, in the presence of autocorrelation, the first-order differences x't of the original series can be expressed as a linear regression model of the previous time index and first-order differences up to a lag of m times indices. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
