added new notes

--- a/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
@@ -58,6 +58,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Second order exponential smoothing\n",
+    "\n",
+    "#### If first order exponential smoothing does not perform well, then there is a trend in the time series data. The trend is commonly observed in many domains such as when marketing campaigns are run by e-commerce companies, the sales rise or any good annual performance by a company will have a bullish effect on its stock prices. The linear trend can occur due to linear trend between time and response:\n",
+    "\n",
+    "- xt = constant + ωt + εt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
